Fixed overlapping menu and gviewer bug. Fixed main page link on logo.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,6 +150,7 @@ div.header div.menu nav > ul li span.mbr{
 .submenu {
   display: none;
   position: absolute;
+  z-index: 10;
   width:219px;
   padding-top: 18px;
 }
